feat: was added the /control view, here you can view the order that came from nats and from post
